data/derived/comb/progs/unify/prog0476.ml.out
Characters 51-60:
  else x::clone(x (n-1));;
               ^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         int -> 'a
       The type variable 'a occurs inside int -> 'a
